--- a/AnacondaScripts/newDB/OnlyVelocity.ipynb
+++ b/AnacondaScripts/newDB/OnlyVelocity.ipynb
@@ -54,7 +54,7 @@
     "PATH=r\"D:\\Users\\Students\\Daniele\\records\\OneCar_db.txt\"\n",
     "BATCH_SIZE=256*2\n",
     "FEATURES=7 \n",
-    "FEATURES_PREDICTED=7"
+    "FEATURES_PREDICTED=3"
    ]
   },
   {
@@ -483,9 +483,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length: 2655284 races: 168 n batches: 2641844 / 1\n",
-      "Length: 1327653 races: 168 n batches: 1314213 / 1\n",
-      "Length: 1327881 races: 168 n batches: 1314441 / 1\n"
+      "Length: 2655284 races: 168 n batches: 2641844 / 512\n",
+      "Length: 1327653 races: 168 n batches: 1314213 / 512\n",
+      "Length: 1327881 races: 168 n batches: 1314441 / 512\n"
      ]
     }
    ],
@@ -493,44 +493,6 @@
     "gen_train=Generator.DataGenerator(BATCH_SIZE,df_train,16000)\n",
     "gen_val=Generator.DataGenerator(BATCH_SIZE,df_val,16000)\n",
     "gen_test=Generator.DataGenerator(BATCH_SIZE,df_test,16000)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "5ba788fa-8aaf-4878-9ef8-29a427d59810",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "X               507.502400\n",
-       "Z               368.759400\n",
-       "VEL_X            34.636370\n",
-       "VEL_Z            37.388150\n",
-       "ROT             359.993600\n",
-       "ANG_VEL_Y         2.159812\n",
-       "ACC_X           556.678300\n",
-       "ACC_Z          1324.802000\n",
-       "TILE             19.000000\n",
-       "TILE_IND         32.000000\n",
-       "X_RELATIVE        0.500001\n",
-       "Z_RELATIVE        0.696202\n",
-       "TIME          12418.100000\n",
-       "RACE            167.000000\n",
-       "GROUP             2.000000\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_train.max()\n"
    ]
   },
   {
@@ -553,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "2d50ad3a",
    "metadata": {
     "tags": []
@@ -652,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "49bc5a7d",
    "metadata": {
     "tags": []
@@ -663,28 +625,28 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "2062/2062 [==============================] - 552s 267ms/step - loss: 10.6587 - mean_absolute_error: 1.7272 - accuracy: 1.0825e-07 - val_loss: 2.2738 - val_mean_absolute_error: 0.8728 - val_accuracy: 3.2666e-07 - lr: 1.0000e-04\n",
+      "5158/5158 [==============================] - 496s 96ms/step - loss: 14.2417 - mean_absolute_error: 1.8190 - accuracy: 1.2622e-07 - val_loss: 1.2071 - val_mean_absolute_error: 0.7566 - val_accuracy: 0.0000e+00 - lr: 1.0000e-04\n",
       "Epoch 2/10\n",
-      "2062/2062 [==============================] - 549s 266ms/step - loss: 1.5650 - mean_absolute_error: 0.6889 - accuracy: 5.9538e-07 - val_loss: 1.2075 - val_mean_absolute_error: 0.5596 - val_accuracy: 6.5331e-07 - lr: 1.0000e-04\n",
+      "5158/5158 [==============================] - 496s 96ms/step - loss: 0.5284 - mean_absolute_error: 0.4881 - accuracy: 6.3110e-07 - val_loss: 0.2291 - val_mean_absolute_error: 0.3358 - val_accuracy: 1.0153e-06 - lr: 1.0000e-04\n",
       "Epoch 3/10\n",
-      "2062/2062 [==============================] - 549s 266ms/step - loss: 0.9492 - mean_absolute_error: 0.4581 - accuracy: 5.9538e-07 - val_loss: 0.8598 - val_mean_absolute_error: 0.3900 - val_accuracy: 1.4155e-06 - lr: 1.0000e-04\n",
+      "5158/5158 [==============================] - 500s 97ms/step - loss: 0.1611 - mean_absolute_error: 0.2807 - accuracy: 1.7671e-06 - val_loss: 0.1318 - val_mean_absolute_error: 0.2546 - val_accuracy: 2.2844e-06 - lr: 1.0000e-04\n",
       "Epoch 4/10\n",
-      "2062/2062 [==============================] - 550s 267ms/step - loss: 0.7497 - mean_absolute_error: 0.3422 - accuracy: 1.2449e-06 - val_loss: 0.7421 - val_mean_absolute_error: 0.3100 - val_accuracy: 9.7997e-07 - lr: 1.0000e-04\n",
+      "5158/5158 [==============================] - 500s 97ms/step - loss: 0.1165 - mean_absolute_error: 0.2401 - accuracy: 2.1457e-06 - val_loss: 0.1093 - val_mean_absolute_error: 0.2323 - val_accuracy: 1.2691e-06 - lr: 1.0000e-04\n",
       "Epoch 5/10\n",
-      "2062/2062 [==============================] - 551s 267ms/step - loss: 0.6781 - mean_absolute_error: 0.2870 - accuracy: 1.1366e-06 - val_loss: 0.6964 - val_mean_absolute_error: 0.2708 - val_accuracy: 6.5331e-07 - lr: 1.0000e-04\n",
+      "5158/5158 [==============================] - 498s 97ms/step - loss: 0.1015 - mean_absolute_error: 0.2241 - accuracy: 1.8933e-06 - val_loss: 0.0983 - val_mean_absolute_error: 0.2201 - val_accuracy: 2.5382e-06 - lr: 1.0000e-04\n",
       "Epoch 6/10\n",
-      "2062/2062 [==============================] - 553s 268ms/step - loss: 0.6495 - mean_absolute_error: 0.2597 - accuracy: 1.0284e-06 - val_loss: 0.6768 - val_mean_absolute_error: 0.2510 - val_accuracy: 4.3554e-07 - lr: 1.0000e-04\n",
+      "5158/5158 [==============================] - 502s 97ms/step - loss: 0.0936 - mean_absolute_error: 0.2152 - accuracy: 2.0195e-06 - val_loss: 0.0929 - val_mean_absolute_error: 0.2146 - val_accuracy: 1.0153e-06 - lr: 1.0000e-04\n",
       "Epoch 7/10\n",
-      "2062/2062 [==============================] - 551s 267ms/step - loss: 0.6363 - mean_absolute_error: 0.2449 - accuracy: 1.6238e-06 - val_loss: 0.6669 - val_mean_absolute_error: 0.2389 - val_accuracy: 1.9599e-06 - lr: 1.0000e-04\n",
+      "5157/5158 [============================>.] - ETA: 0s - loss: 0.0887 - mean_absolute_error: 0.2091 - accuracy: 1.2624e-06\n",
+      "Epoch 7: ReduceLROnPlateau reducing learning rate to 4.999999873689376e-05.\n",
+      "5158/5158 [==============================] - 496s 96ms/step - loss: 0.0887 - mean_absolute_error: 0.2091 - accuracy: 1.2622e-06 - val_loss: 0.0910 - val_mean_absolute_error: 0.2145 - val_accuracy: 7.6145e-07 - lr: 1.0000e-04\n",
       "Epoch 8/10\n",
-      "2062/2062 [==============================] - 552s 268ms/step - loss: 0.6288 - mean_absolute_error: 0.2357 - accuracy: 1.6238e-06 - val_loss: 0.6605 - val_mean_absolute_error: 0.2304 - val_accuracy: 2.0688e-06 - lr: 1.0000e-04\n",
+      "5158/5158 [==============================] - 498s 96ms/step - loss: 0.0841 - mean_absolute_error: 0.2026 - accuracy: 2.9031e-06 - val_loss: 0.0851 - val_mean_absolute_error: 0.2036 - val_accuracy: 2.0305e-06 - lr: 5.0000e-05\n",
       "Epoch 9/10\n",
-      "2062/2062 [==============================] - 553s 268ms/step - loss: 0.6242 - mean_absolute_error: 0.2294 - accuracy: 1.1908e-06 - val_loss: 0.6563 - val_mean_absolute_error: 0.2252 - val_accuracy: 1.4155e-06 - lr: 1.0000e-04\n",
+      "5158/5158 [==============================] - 499s 97ms/step - loss: 0.0820 - mean_absolute_error: 0.1999 - accuracy: 2.5244e-06 - val_loss: 0.0828 - val_mean_absolute_error: 0.2005 - val_accuracy: 3.8073e-06 - lr: 5.0000e-05\n",
       "Epoch 10/10\n",
-      "2062/2062 [==============================] - ETA: 0s - loss: 0.6210 - mean_absolute_error: 0.2249 - accuracy: 1.5696e-06\n",
-      "Epoch 10: ReduceLROnPlateau reducing learning rate to 4.999999873689376e-05.\n",
-      "2062/2062 [==============================] - 553s 268ms/step - loss: 0.6210 - mean_absolute_error: 0.2249 - accuracy: 1.5696e-06 - val_loss: 0.6535 - val_mean_absolute_error: 0.2209 - val_accuracy: 1.5244e-06 - lr: 1.0000e-04\n",
-      "Loss: 0.6481804251670837 MAE: 0.21861782670021057 Accuracy: 1.4155052667774726e-06\n",
+      "5158/5158 [==============================] - 500s 97ms/step - loss: 0.0802 - mean_absolute_error: 0.1974 - accuracy: 3.1555e-06 - val_loss: 0.0812 - val_mean_absolute_error: 0.1981 - val_accuracy: 2.5382e-06 - lr: 5.0000e-05\n",
+      "Loss: 0.07773538678884506 MAE: 0.1940382719039917 Accuracy: 2.2834665287518874e-06\n",
       "INFO:tensorflow:Assets written to: saved_model/MLP0001_PosAssoluta\\assets\n"
      ]
     }
