--- a/AnacondaScripts/newDB/OnlyVelocity.ipynb
+++ b/AnacondaScripts/newDB/OnlyVelocity.ipynb
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "9695dc32",
    "metadata": {
     "tags": []
@@ -752,53 +752,23 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "2062/2062 [==============================] - 553s 267ms/step - loss: 88.7580 - mean_absolute_error: 6.2279 - accuracy: 0.0000e+00 - val_loss: 50.2275 - val_mean_absolute_error: 4.6615 - val_accuracy: 0.0000e+00 - lr: 1.0000e-04\n",
+      "5158/5158 [==============================] - 494s 95ms/step - loss: 51.7426 - mean_absolute_error: 4.6764 - accuracy: 1.2622e-07 - val_loss: 6.7905 - val_mean_absolute_error: 1.7357 - val_accuracy: 5.0763e-07 - lr: 1.0000e-04\n",
       "Epoch 2/100\n",
-      "2062/2062 [==============================] - 552s 267ms/step - loss: 34.7029 - mean_absolute_error: 3.7851 - accuracy: 0.0000e+00 - val_loss: 20.3536 - val_mean_absolute_error: 2.8223 - val_accuracy: 0.0000e+00 - lr: 1.0000e-04\n",
+      "5158/5158 [==============================] - 491s 95ms/step - loss: 2.5827 - mean_absolute_error: 1.0840 - accuracy: 3.7866e-07 - val_loss: 9.2818 - val_mean_absolute_error: 2.1104 - val_accuracy: 0.0000e+00 - lr: 1.0000e-04\n",
       "Epoch 3/100\n",
-      "2062/2062 [==============================] - 554s 269ms/step - loss: 13.1502 - mean_absolute_error: 2.2193 - accuracy: 1.0825e-07 - val_loss: 7.7751 - val_mean_absolute_error: 1.6381 - val_accuracy: 3.2666e-07 - lr: 1.0000e-04\n",
+      "5157/5158 [============================>.] - ETA: 0s - loss: 1.1429 - mean_absolute_error: 0.7442 - accuracy: 3.7873e-07\n",
+      "Epoch 3: ReduceLROnPlateau reducing learning rate to 4.999999873689376e-05.\n",
+      "5158/5158 [==============================] - 492s 95ms/step - loss: 1.1429 - mean_absolute_error: 0.7442 - accuracy: 3.7866e-07 - val_loss: 10.6508 - val_mean_absolute_error: 2.2715 - val_accuracy: 0.0000e+00 - lr: 1.0000e-04\n",
       "Epoch 4/100\n",
-      "2062/2062 [==============================] - 552s 267ms/step - loss: 4.6471 - mean_absolute_error: 1.2649 - accuracy: 5.4126e-08 - val_loss: 4.5808 - val_mean_absolute_error: 1.1905 - val_accuracy: 1.0889e-07 - lr: 1.0000e-04\n",
+      "5158/5158 [==============================] - 495s 96ms/step - loss: 0.9419 - mean_absolute_error: 0.6792 - accuracy: 2.5244e-07 - val_loss: 10.8350 - val_mean_absolute_error: 2.3201 - val_accuracy: 2.5382e-07 - lr: 5.0000e-05\n",
       "Epoch 5/100\n",
-      "2062/2062 [==============================] - 552s 268ms/step - loss: 2.0700 - mean_absolute_error: 0.8251 - accuracy: 2.7063e-07 - val_loss: 4.4105 - val_mean_absolute_error: 1.1554 - val_accuracy: 2.1777e-07 - lr: 1.0000e-04\n",
+      "5158/5158 [==============================] - 494s 96ms/step - loss: 0.8408 - mean_absolute_error: 0.6434 - accuracy: 1.2622e-07 - val_loss: 10.9084 - val_mean_absolute_error: 2.3554 - val_accuracy: 0.0000e+00 - lr: 5.0000e-05\n",
       "Epoch 6/100\n",
-      "2062/2062 [==============================] - 552s 268ms/step - loss: 1.3825 - mean_absolute_error: 0.6544 - accuracy: 5.9538e-07 - val_loss: 4.4870 - val_mean_absolute_error: 1.1358 - val_accuracy: 1.0889e-07 - lr: 1.0000e-04\n",
+      "5158/5158 [==============================] - 492s 95ms/step - loss: 0.7642 - mean_absolute_error: 0.6151 - accuracy: 6.3110e-07 - val_loss: 10.4437 - val_mean_absolute_error: 2.3292 - val_accuracy: 2.5382e-07 - lr: 5.0000e-05\n",
       "Epoch 7/100\n",
-      "2062/2062 [==============================] - ETA: 0s - loss: 1.1368 - mean_absolute_error: 0.5798 - accuracy: 5.9538e-07\n",
-      "Epoch 7: ReduceLROnPlateau reducing learning rate to 4.999999873689376e-05.\n",
-      "2062/2062 [==============================] - 552s 268ms/step - loss: 1.1368 - mean_absolute_error: 0.5798 - accuracy: 5.9538e-07 - val_loss: 4.5686 - val_mean_absolute_error: 1.1328 - val_accuracy: 1.0889e-07 - lr: 1.0000e-04\n",
-      "Epoch 8/100\n",
-      "2062/2062 [==============================] - 551s 267ms/step - loss: 1.0697 - mean_absolute_error: 0.5561 - accuracy: 3.2475e-07 - val_loss: 3.2371 - val_mean_absolute_error: 0.9578 - val_accuracy: 1.0889e-07 - lr: 5.0000e-05\n",
-      "Epoch 9/100\n",
-      "2062/2062 [==============================] - 552s 267ms/step - loss: 1.0118 - mean_absolute_error: 0.5370 - accuracy: 2.7063e-07 - val_loss: 3.2212 - val_mean_absolute_error: 0.9572 - val_accuracy: 3.2666e-07 - lr: 5.0000e-05\n",
-      "Epoch 10/100\n",
-      "2062/2062 [==============================] - 552s 268ms/step - loss: 0.9628 - mean_absolute_error: 0.5212 - accuracy: 5.4126e-07 - val_loss: 3.3266 - val_mean_absolute_error: 0.9712 - val_accuracy: 2.1777e-07 - lr: 5.0000e-05\n",
-      "Epoch 11/100\n",
-      "2062/2062 [==============================] - 551s 267ms/step - loss: 0.9278 - mean_absolute_error: 0.5082 - accuracy: 5.9538e-07 - val_loss: 3.3494 - val_mean_absolute_error: 0.9749 - val_accuracy: 1.0889e-07 - lr: 5.0000e-05\n",
-      "Epoch 12/100\n",
-      "2062/2062 [==============================] - 552s 268ms/step - loss: 0.8954 - mean_absolute_error: 0.4966 - accuracy: 9.2014e-07 - val_loss: 3.3912 - val_mean_absolute_error: 0.9800 - val_accuracy: 4.3554e-07 - lr: 5.0000e-05\n",
-      "Epoch 13/100\n",
-      "2062/2062 [==============================] - ETA: 0s - loss: 0.8676 - mean_absolute_error: 0.4861 - accuracy: 7.0363e-07\n",
-      "Epoch 13: ReduceLROnPlateau reducing learning rate to 2.499999936844688e-05.\n",
-      "2062/2062 [==============================] - 552s 267ms/step - loss: 0.8676 - mean_absolute_error: 0.4861 - accuracy: 7.0363e-07 - val_loss: 3.4753 - val_mean_absolute_error: 0.9926 - val_accuracy: 6.5331e-07 - lr: 5.0000e-05\n",
-      "Epoch 14/100\n",
-      "2062/2062 [==============================] - 552s 268ms/step - loss: 0.8737 - mean_absolute_error: 0.4877 - accuracy: 5.4126e-07 - val_loss: 2.6968 - val_mean_absolute_error: 0.8839 - val_accuracy: 2.1777e-07 - lr: 2.5000e-05\n",
-      "Epoch 15/100\n",
-      "2062/2062 [==============================] - 551s 267ms/step - loss: 0.8587 - mean_absolute_error: 0.4827 - accuracy: 4.3301e-07 - val_loss: 2.7630 - val_mean_absolute_error: 0.8954 - val_accuracy: 6.5331e-07 - lr: 2.5000e-05\n",
-      "Epoch 16/100\n",
-      "2062/2062 [==============================] - 551s 267ms/step - loss: 0.8447 - mean_absolute_error: 0.4780 - accuracy: 5.9538e-07 - val_loss: 2.8120 - val_mean_absolute_error: 0.9029 - val_accuracy: 3.2666e-07 - lr: 2.5000e-05\n",
-      "Epoch 17/100\n",
-      "2062/2062 [==============================] - 551s 267ms/step - loss: 0.8309 - mean_absolute_error: 0.4733 - accuracy: 3.2475e-07 - val_loss: 2.8313 - val_mean_absolute_error: 0.9079 - val_accuracy: 5.4443e-07 - lr: 2.5000e-05\n",
-      "Epoch 18/100\n",
-      "2062/2062 [==============================] - 552s 267ms/step - loss: 0.8201 - mean_absolute_error: 0.4693 - accuracy: 4.3301e-07 - val_loss: 2.8299 - val_mean_absolute_error: 0.9093 - val_accuracy: 3.2666e-07 - lr: 2.5000e-05\n",
-      "Epoch 19/100\n",
-      "2062/2062 [==============================] - ETA: 0s - loss: 0.8101 - mean_absolute_error: 0.4652 - accuracy: 4.3301e-07\n",
-      "Epoch 19: ReduceLROnPlateau reducing learning rate to 1.249999968422344e-05.\n",
-      "2062/2062 [==============================] - 552s 268ms/step - loss: 0.8101 - mean_absolute_error: 0.4652 - accuracy: 4.3301e-07 - val_loss: 2.9443 - val_mean_absolute_error: 0.9287 - val_accuracy: 4.3554e-07 - lr: 2.5000e-05\n",
-      "Epoch 20/100\n",
-      "2062/2062 [==============================] - 553s 268ms/step - loss: 0.8289 - mean_absolute_error: 0.4705 - accuracy: 2.7063e-07 - val_loss: 2.7012 - val_mean_absolute_error: 0.8873 - val_accuracy: 0.0000e+00 - lr: 1.2500e-05\n",
-      "Loss: 2.6620938777923584 MAE: 0.8840721249580383 Accuracy: 5.444250632535841e-07\n",
-      "INFO:tensorflow:Assets written to: saved_model/LSTM3_64_0.0001_NormFalse\\assets\n"
+      "5158/5158 [==============================] - 493s 96ms/step - loss: 0.7047 - mean_absolute_error: 0.5916 - accuracy: 3.7866e-07 - val_loss: 10.1124 - val_mean_absolute_error: 2.3105 - val_accuracy: 0.0000e+00 - lr: 5.0000e-05\n",
+      "Loss: 10.821441650390625 MAE: 2.3846304416656494 Accuracy: 0.0\n",
+      "INFO:tensorflow:Assets written to: saved_model/vel/LSTM3_64_0.0001_NormFalse\\assets\n"
      ]
     }
    ],
@@ -813,7 +783,7 @@
     "\n",
     "ev=lstm_ph.evaluate(gen_test,verbose=0)\n",
     "print(f\"Loss: {ev[0]} MAE: {ev[1]} Accuracy: {ev[2]}\")\n",
-    "tf.saved_model.save(mlp_ph,f'saved_model/{name}')"
+    "tf.saved_model.save(mlp_ph,f'saved_model/vel/{name}')"
    ]
   },
   {
@@ -922,11 +892,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "cf5ac715",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "in user code:\n\n    File \"C:\\ProgramData\\Anaconda3\\envs\\tf_gpu\\lib\\site-packages\\keras\\engine\\training.py\", line 2041, in predict_function  *\n        return step_function(self, iterator)\n    File \"C:\\ProgramData\\Anaconda3\\envs\\tf_gpu\\lib\\site-packages\\keras\\engine\\training.py\", line 2027, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"C:\\ProgramData\\Anaconda3\\envs\\tf_gpu\\lib\\site-packages\\keras\\engine\\training.py\", line 2015, in run_step  **\n        outputs = model.predict_step(data)\n    File \"C:\\ProgramData\\Anaconda3\\envs\\tf_gpu\\lib\\site-packages\\keras\\engine\\training.py\", line 1983, in predict_step\n        return self(x, training=False)\n    File \"C:\\ProgramData\\Anaconda3\\envs\\tf_gpu\\lib\\site-packages\\keras\\utils\\traceback_utils.py\", line 70, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"C:\\ProgramData\\Anaconda3\\envs\\tf_gpu\\lib\\site-packages\\keras\\engine\\input_spec.py\", line 216, in assert_input_compatibility\n        raise ValueError(\n\n    ValueError: Layer \"sequential\" expects 1 input(s), but it received 2 input tensors. Inputs received: [<tf.Tensor 'IteratorGetNext:0' shape=(32, 20, 7) dtype=float64>, <tf.Tensor 'IteratorGetNext:1' shape=(32, 3) dtype=float64>]\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmlp_ph\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgen_test\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mC:\\ProgramData\\Anaconda3\\envs\\tf_gpu\\lib\\site-packages\\keras\\utils\\traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Temp\\__autograph_generated_filezlm7pqto.py:15\u001b[0m, in \u001b[0;36mouter_factory.<locals>.inner_factory.<locals>.tf__predict_function\u001b[1;34m(iterator)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m     14\u001b[0m     do_return \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m     retval_ \u001b[38;5;241m=\u001b[39m ag__\u001b[38;5;241m.\u001b[39mconverted_call(ag__\u001b[38;5;241m.\u001b[39mld(step_function), (ag__\u001b[38;5;241m.\u001b[39mld(\u001b[38;5;28mself\u001b[39m), ag__\u001b[38;5;241m.\u001b[39mld(iterator)), \u001b[38;5;28;01mNone\u001b[39;00m, fscope)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[0;32m     17\u001b[0m     do_return \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: in user code:\n\n    File \"C:\\ProgramData\\Anaconda3\\envs\\tf_gpu\\lib\\site-packages\\keras\\engine\\training.py\", line 2041, in predict_function  *\n        return step_function(self, iterator)\n    File \"C:\\ProgramData\\Anaconda3\\envs\\tf_gpu\\lib\\site-packages\\keras\\engine\\training.py\", line 2027, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"C:\\ProgramData\\Anaconda3\\envs\\tf_gpu\\lib\\site-packages\\keras\\engine\\training.py\", line 2015, in run_step  **\n        outputs = model.predict_step(data)\n    File \"C:\\ProgramData\\Anaconda3\\envs\\tf_gpu\\lib\\site-packages\\keras\\engine\\training.py\", line 1983, in predict_step\n        return self(x, training=False)\n    File \"C:\\ProgramData\\Anaconda3\\envs\\tf_gpu\\lib\\site-packages\\keras\\utils\\traceback_utils.py\", line 70, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"C:\\ProgramData\\Anaconda3\\envs\\tf_gpu\\lib\\site-packages\\keras\\engine\\input_spec.py\", line 216, in assert_input_compatibility\n        raise ValueError(\n\n    ValueError: Layer \"sequential\" expects 1 input(s), but it received 2 input tensors. Inputs received: [<tf.Tensor 'IteratorGetNext:0' shape=(32, 20, 7) dtype=float64>, <tf.Tensor 'IteratorGetNext:1' shape=(32, 3) dtype=float64>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mlp_ph.predict(gen_test[0])"
+   ]
   }
  ],
  "metadata": {
