--- a/AnacondaScripts/Untitled.ipynb
+++ b/AnacondaScripts/Untitled.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "ed6a9abb-bc58-4573-81c4-6226283d240b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "files=16\n",
-    "baseFileName=r\"D:\\Users\\Students\\Daniele\\records\\Physic\\Physic\"\n",
-    "toWrite=r\"D:\\Users\\Students\\Daniele\\records\\OneCar_db.txt\"\n",
+    "files=12\n",
+    "baseFileName=r\"C:\\Users\\dansp\\OneDrive\\Desktop\\Tesi\\Logs\\commPhy\\CommPhy\"\n",
+    "toWrite=r\"C:\\Users\\dansp\\OneDrive\\Desktop\\Tesi\\Logs\\PhysycAndCommand_db.txt\"\n",
     "\n",
     "def Name(base,i):\n",
     "    final=base\n",
@@ -1028,7 +1028,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
