--- a/AnacondaScripts/newDB/OnlyVelocity.ipynb
+++ b/AnacondaScripts/newDB/OnlyVelocity.ipynb
@@ -80,7 +80,7 @@
     "BATCH_SIZE=256*2\n",
     "FEATURES=7 \n",
     "FEATURES_PREDICTED=6\n",
-    "DISCARD=4"
+    "DISCARD=4 \n",
     "COMM_PHY=True\n",
     "#PATH=r\"C:\\Users\\dansp\\OneDrive\\Desktop\\Tesi\\SCRITTURA\\OneCar_tack1_db.txt\"\n",
     "BATCH_SIZE=256*2\n",
@@ -367,7 +367,6 @@
     "    normalization=normalization,\n",
     "    verbose=1\n",
     ")\n",
-    "\n",
     "ev=lstm_ph.evaluate(gen_test,verbose=0)\n",
     "print(f\"Loss: {ev[0]} MAE: {ev[1]} Accuracy: {ev[2]}\")\n",
     "#tf.saved_model.save(lstm_ph,f'saved_model/{name}')"
